# anomalynews

./: CLAUDE.md  README.md  anomalynews_experiment.ipynb  main.py  pyproject.toml  run_lof_anomaly_detection.py
app/: main.py
app/core/anomaly_detectors/: base_anomaly_detector.py  lof_anomaly_detector.py
app/models/: anomaly_detector_models.py
app/services/: anomaly_detector.py  anomaly_detector_service.py  news_api.py
app/utils/: embedding_helpers.py
results/: articles_with_scores.json  lof_summary.json
